--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,70 @@ body {
   color: black;
   text-align: center;
 }
+
+.l_view {
+  margin-left: 30px;
+}
+.contact__me {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.contact__me .cont__list {
+  color: whitesmoke;
+  position: relative;
+  list-style: none;
+  width: 60px;
+  height: 60px;
+  margin: 30px 50px;
+  transform: rotate(-30deg) skew(25deg);
+  font-size: 100px;
+  background: #ccc;
+}
+.contact__me .cont__list span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  transition: 0.5s;
+  display: flex !important;
+  align-items: center;
+  font-size: 30px !important;
+}
+.contact__me .cont__list:hover span:nth-child(5) {
+  transform: translate(40px, -40px);
+  opacity: 1;
+}
+.contact__me .cont__list:hover span:nth-child(4) {
+  transform: translate(30px, -30px);
+  opacity: 0.8;
+}
+.contact__me .cont__list:hover span:nth-child(3) {
+  transform: translate(20px, -20px);
+  opacity: 0.6;
+}
+.contact__me .cont__list:hover span:nth-child(2) {
+  transform: translate(10px, -10px);
+  opacity: 0.6;
+}
+.contact__me .cont__list:hover span:nth-child(1) {
+  transform: translate(0, 0);
+  opacity: 0.2;
+}
+
+.github {
+  padding-left: 5px;
+}
+.email {
+  padding-left: 5px;
+  margin-bottom: 5px;
+}
+
+.about__p {
+  text-align: center;
+}
