--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,7 +175,7 @@ textarea {
 }
 
 .contact-form {
-  border-radius: 6px;
+  box-shadow: 0 8px 6px -1px black;
   border: 1px solid;
   padding: 20px 70px;
   width: 60%;
@@ -2254,8 +2254,10 @@ ul.actions.special {
 
 #nav > ul {
   display: inline-block;
+  border: 1px solid;
   border-radius: 0.35em;
-  box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+  box-shadow: inset 0px 0px 1px 1px black;
+  box-shadow: 0 8px 6px -6px black;
   padding: 0 1.5em 0 1.5em;
   margin-right: 1.8em;
 }
@@ -2277,7 +2279,7 @@ ul.actions.special {
   color: rgba(255, 255, 255, 0.75);
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 0.8em;
   letter-spacing: 0.25em;
   height: 5em;
   line-height: 5em;
