--- a/styles.css
+++ b/styles.css
@@ -158,3 +158,14 @@ h1 {
   background-color: #282b34;
 }
 
+.feedback {
+  color: whitesmoke;
+  font-size: 13px;
+  margin-bottom: 5px;
+  text-align: center;
+  font-style: italic;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 rgb(54, 52, 52), -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.feedback:hover {
+  transform:translateY(-30)
+}
